# NVRHI-Lab

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
.opencode/: CONTEXT_PHILOSOPHY.md
.opencode/contexts/: CHOICES_MADE.md  IMPLEMENTATION_PLAN.md  LEARNING_PURPOSE.md  PROJECT_DESIGN.md  RULES.md  TECH_STACK.md
.opencode/skills/session-continuity/: SKILL.md  review-context.sh
.opencode/skills/session-continuity/scripts/: review-context.sh
docs/: architecture.md  implementation-phases.md  nvrhi-guide.md  version-log.md
src/: main.cpp
src/frontend/: my_app.cpp  my_app.h
